--- a/configurations/demo01.yaml
+++ b/configurations/demo01.yaml
@@ -4,4 +4,4 @@ vmConfig:
   heapSize: 4g
   mainMethod: us.ihmc.atlas.AtlasDemo01ROSAPISimulator
 dependencies:
-- us.ihmc:Atlas:0.9.0
+- us.ihmc:atlas:0.11.0
