remote visualizer and robot yaml files were swapped.

--- a/configurations/remote_visualizer.yaml
+++ b/configurations/remote_visualizer.yaml
@@ -2,6 +2,6 @@
 programArgs: []
 vmConfig:
   heapSize: 4g
-  mainMethod: us.ihmc.atlas.AtlasROSAPINetworkProcessor
+  mainMethod: us.ihmc.atlas.RemoteAtlasVisualizer
 dependencies:
 - us.ihmc:atlas:0.11.0
