--- a/configurations/IHMCNetworkParametersRobot.ini
+++ b/configurations/IHMCNetworkParametersRobot.ini
@@ -1,3 +1,7 @@
 robotController=cpu0
-networkManager=cpu1
+networkManager=cpu2
 logger=10.3.3.5
+rosURI=cpu2:11311
+leftHand=192.168.135.103
+rightHand=192.168.134.103
+
